@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2023 the Eclipse BaSyx Authors
+ * Copyright (C) 2025 the Eclipse BaSyx Authors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
@@ -24,19 +24,13 @@
  ******************************************************************************/
 package org.eclipse.digitaltwin.basyx.aasrepository.backend;
 
-import java.io.File;
-import java.io.InputStream;
-import java.util.List;
-import java.util.TreeMap;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
 import org.eclipse.digitaltwin.aas4j.v3.model.AssetAdministrationShell;
 import org.eclipse.digitaltwin.aas4j.v3.model.AssetInformation;
 import org.eclipse.digitaltwin.aas4j.v3.model.Reference;
 import org.eclipse.digitaltwin.basyx.aasrepository.AasRepository;
 import org.eclipse.digitaltwin.basyx.aasservice.AasService;
 import org.eclipse.digitaltwin.basyx.aasservice.AasServiceFactory;
+import org.eclipse.digitaltwin.basyx.aasservice.backend.AasBackend;
 import org.eclipse.digitaltwin.basyx.core.exceptions.CollidingIdentifierException;
 import org.eclipse.digitaltwin.basyx.core.exceptions.ElementDoesNotExistException;
 import org.eclipse.digitaltwin.basyx.core.exceptions.IdentificationMismatchException;
@@ -44,8 +38,14 @@ import org.eclipse.digitaltwin.basyx.core.exceptions.MissingIdentifierException;
 import org.eclipse.digitaltwin.basyx.core.pagination.CursorResult;
 import org.eclipse.digitaltwin.basyx.core.pagination.PaginationInfo;
 import org.eclipse.digitaltwin.basyx.core.pagination.PaginationSupport;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.repository.CrudRepository;
+
+import java.io.File;
+import java.io.InputStream;
+import java.util.List;
+import java.util.TreeMap;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 /**
  * Default Implementation for the {@link AasRepository} based on Spring
@@ -56,20 +56,14 @@ import org.springframework.data.repository.CrudRepository;
  */
 public class CrudAasRepository implements AasRepository {
 
-	private CrudRepository<AssetAdministrationShell, String> aasBackend;
+	private final AasBackend aasBackend;
+	private final AasServiceFactory aasServiceFactory;
 
-	private AasServiceFactory aasServiceFactory;
+	private final String aasRepositoryName;
 
-	private String aasRepositoryName = null;
-
-	public CrudAasRepository(AasBackendProvider aasBackendProvider, AasServiceFactory aasServiceFactory) {
-		this.aasBackend = aasBackendProvider.getCrudRepository();
+	public CrudAasRepository(AasBackend aasBackend, AasServiceFactory aasServiceFactory, String aasRepositoryName) {
+		this.aasBackend = aasBackend;
 		this.aasServiceFactory = aasServiceFactory;
-	}
-
-	public CrudAasRepository(AasBackendProvider aasBackendProvider, AasServiceFactory aasServiceFactory, @Value("${basyx.aasrepo.name:aas-repo}") String aasRepositoryName) {
-		this(aasBackendProvider, aasServiceFactory);
-
 		this.aasRepositoryName = aasRepositoryName;
 	}
 
@@ -77,7 +71,7 @@ public class CrudAasRepository implements AasRepository {
 	public CursorResult<List<AssetAdministrationShell>> getAllAas(PaginationInfo pInfo) {
 
 		Iterable<AssetAdministrationShell> iterable = aasBackend.findAll();
-		List<AssetAdministrationShell> allAas = StreamSupport.stream(iterable.spliterator(), false).collect(Collectors.toList());
+		List<AssetAdministrationShell> allAas = StreamSupport.stream(iterable.spliterator(), false).toList();
 
 		TreeMap<String, AssetAdministrationShell> aasMap = allAas.stream().collect(Collectors.toMap(AssetAdministrationShell::getId, aas -> aas, (a, b) -> a, TreeMap::new));
 
@@ -94,7 +88,7 @@ public class CrudAasRepository implements AasRepository {
 	@Override
 	public void createAas(AssetAdministrationShell aas) throws CollidingIdentifierException, MissingIdentifierException {
 		throwIfAasIdEmptyOrNull(aas.getId());
-		
+
 		throwIfAasExists(aas);
 
 		aasBackend.save(aas);
@@ -118,41 +112,28 @@ public class CrudAasRepository implements AasRepository {
 
 	@Override
 	public CursorResult<List<Reference>> getSubmodelReferences(String aasId, PaginationInfo pInfo) {
-		return getAasServiceOrThrow(aasId).getSubmodelReferences(pInfo);
+		return getService(aasId).getSubmodelReferences(pInfo);
 	}
 
 	@Override
 	public void addSubmodelReference(String aasId, Reference submodelReference) {
-		AasService aasService = getAasServiceOrThrow(aasId);
-
-		aasService.addSubmodelReference(submodelReference);
-
-		updateAas(aasId, aasService.getAAS());
+		getService(aasId).addSubmodelReference(submodelReference);
 	}
 
 	@Override
 	public void removeSubmodelReference(String aasId, String submodelId) {
-		AasService aasService = getAasServiceOrThrow(aasId);
-
-		aasService.removeSubmodelReference(submodelId);
-
-		updateAas(aasId, aasService.getAAS());
+		getService(aasId).removeSubmodelReference(submodelId);
 	}
 
 	@Override
 	public void setAssetInformation(String aasId, AssetInformation aasInfo) throws ElementDoesNotExistException {
-		AasService aasService = getAasServiceOrThrow(aasId);
-
-		aasService.setAssetInformation(aasInfo);
-
-		updateAas(aasId, aasService.getAAS());
+		getService(aasId).setAssetInformation(aasInfo);
 	}
 
 	@Override
 	public AssetInformation getAssetInformation(String aasId) throws ElementDoesNotExistException {
-		return getAasServiceOrThrow(aasId).getAssetInformation();
+		return getService(aasId).getAssetInformation();
 	}
-
 
 	@Override
 	public String getName() {
@@ -161,31 +142,17 @@ public class CrudAasRepository implements AasRepository {
 
 	@Override
 	public File getThumbnail(String aasId) {
-		return getAasServiceOrThrow(aasId).getThumbnail();
+		return getService(aasId).getThumbnail();
 	}
 
 	@Override
 	public void setThumbnail(String aasId, String fileName, String contentType, InputStream inputStream) {
-		AasService aasService = getAasServiceOrThrow(aasId);
-
-		aasService.setThumbnail(fileName, contentType, inputStream);
-
-		updateAas(aasId, aasService.getAAS());
+		getService(aasId).setThumbnail(fileName, contentType, inputStream);
 	}
 
 	@Override
 	public void deleteThumbnail(String aasId) {
-		AasService aasService = getAasServiceOrThrow(aasId);
-
-		aasService.deleteThumbnail();
-
-		updateAas(aasId, aasService.getAAS());
-	}
-
-	private AasService getAasServiceOrThrow(String aasId) {
-		AssetAdministrationShell aas = aasBackend.findById(aasId).orElseThrow(() -> new ElementDoesNotExistException(aasId));
-
-		return aasServiceFactory.create(aas);
+		getService(aasId).deleteThumbnail();
 	}
 
 	private void throwIfMismatchingIds(String aasId, AssetAdministrationShell newAas) {
@@ -200,9 +167,9 @@ public class CrudAasRepository implements AasRepository {
 		if (aasBackend.existsById(aasId))
 			throw new CollidingIdentifierException(aasId);
 	}
-	
+
 	private void throwIfAasIdEmptyOrNull(String aasId) {
-		if(aasId == null || aasId.isBlank())
+		if (aasId == null || aasId.isBlank())
 			throw new MissingIdentifierException(aasId);
 	}
 
@@ -210,4 +177,9 @@ public class CrudAasRepository implements AasRepository {
 		if (!aasBackend.existsById(aasId))
 			throw new ElementDoesNotExistException(aasId);
 	}
+
+	private AasService getService(String aasId) {
+		return aasServiceFactory.create(aasId);
+	}
+
 }
